# DGM

./: .gitignore  CMakeLists.txt  DGM.sln  README.md  changelog.txt  dependencies.cmake  install.bat  prepare-release.bat  utils.cmake  version.cmake
DGM/: DGM.vcxproj  DGM.vcxproj.filters  TileRenderer.cpp
DGM/include/DGM/: dgm.hpp
DGM/include/DGM/classes/: Animation.hpp  AnimationData.hpp  AnimationState.hpp  App.hpp  AppState.hpp  Buffer.hpp  Clip.hpp  Collision.hpp  Config.hpp  ConfigItem.hpp  Controller.hpp  Conversion.hpp  Countdown.hpp  Counter.hpp  Dice.hpp  Level.hpp  Math.hpp  Objects.hpp  Particle.hpp  ParticleEffect.hpp  ParticleSystem.hpp  Pathfinder.hpp  ResourceManager.hpp  Strings.hpp  TileRenderer.hpp  Tileset.hpp  TilesetRenderer.hpp  Time.hpp  TimeCountdown.hpp  Window.hpp
DGM/include/DGM/classes/Molded/: Flaggable.hpp  GameCore.hpp
DGM/lib/: dgm-d.lib
DGM/source/: Animation.cpp  AnimationData.cpp  AnimationState.cpp  App.cpp  Clip.cpp  Collision.cpp  Config.cpp  ConfigItem.cpp  Controller.cpp  Conversion.cpp  Countdown.cpp  Counter.cpp  Dice.cpp  Level.cpp  Loader.cpp  Objects.cpp  ParticleEffect.cpp  ParticleSystem.cpp  ParticleSystemRenderer.cpp  Pathfinder.cpp  ResourceManager.cpp  Strings.cpp  TileRenderer.cpp  Tileset.cpp  TimeCountdown.cpp  Window.cpp
DGM/source/Molded/: Flaggable.cpp  GameCore.cpp
Data/: config.ini
Docs/: Animation.md  ProjectSetup.md
Examples/: example01.cpp
Testing/: Testing.vcxproj  main.cpp
cmake/: cpp.cmake  dependencies.cmake
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  buffer.md  quickstart.md
docs/examples/: example01.cpp  example02.cpp  example03.cpp
docs/old/: Buffer.md
examples/: 02_controller.cpp  04_particle_system.cpp  05_game_fifteen.cpp  06_animation.cpp  08_buffer_mesh.cpp  09_resource_manager.cpp  10_tileset.cpp  11_advanced_particle_system.cpp  11_advanced_particle_system.lvd  11_sand_simulation.cpp  11_sand_simulation.lvd  CMakeLists.txt  GasParticleSystem.hpp  Level.hpp  Readme.md  SandParticleSystem.hpp  Thumbs.db  example01.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp  example06.cpp  example07.cpp  example08.cpp  example09.cpp  example10.cpp  level.lvd  release.CMakeLists.txt.in
examples/resources/: 12_simple_lights.lvd
examples/src/: 01_polar_cartesian.cpp  02_controller.cpp  03_app_state.cpp  04_particle_system.cpp  05_game_fifteen.cpp  06_animation.cpp  07_collisions.cpp  08_buffer_mesh.cpp  09_resource_manager.cpp  10_tileset.cpp  11_advanced_particle_system.cpp  12_simple_lights.cpp  13_camera.cpp  GasParticleSystem.hpp  Level.hpp  RootDir.hpp  SandParticleSystem.hpp
include/DGM/: dgm.hpp
include/DGM/classes/: Animation.hpp  Buffer.hpp  Camera.hpp  Clip.hpp  Controller.hpp  Conversion.hpp  Error.hpp  Math.hpp  Objects.hpp  Particle.hpp  ParticleSystem.hpp  ParticleSystemRenderer.hpp  ResourceManager.hpp  Shell.hpp  TileMap.hpp  Tileset.hpp  TilesetRenderer.hpp  Time.hpp  Window.hpp
lib/: CMakeLists.txt
lib/include/DGM/: dgm.hpp
lib/include/DGM/classes/: Controller.hpp  Math.hpp  NavMesh.hpp  Path.hpp
lib/src/: Path.cpp
lib/tests/: CMakeLists.txt  Math.cpp
project-template/: CMakeLists.txt
project-template/inputs/: CMakeLists.txt.in  dependencies.cmake.in
project-template/template/: CMakeLists.txt  Readme.md  version.cmake
project-template/template/src/: AppStateIngame.cpp  AppStateIngame.hpp  AppStateMainMenu.cpp  AppStateMenuOptions.cpp  AppStateMenuOptions.hpp  Globals.hpp  Main.cpp  Soundbox.cpp  Soundbox.hpp
project-template/template/src/appstates/: AppStateBootstrap.cpp  AppStateBootstrap.hpp  AppStateIngame.cpp  AppStateIngame.hpp  AppStateMainMenu.cpp  AppStateMainMenu.hpp  AppStateMenuOptions.cpp  AppStateMenuOptions.hpp  AppStateShell.cpp  AppStateShell.hpp  GuiState.cpp  GuiState.hpp
src/: Animation.cpp  App.cpp  Camera.cpp  Clip.cpp  Collision.cpp  Controller.cpp  Conversion.cpp  Objects.cpp  Particle.cpp  ParticleSystem.cpp  ParticleSystemRenderer.cpp  ResourceManager.cpp  Tileset.cpp  TilesetRenderer.cpp  Window.cpp
template/: .gitignore  Readme.md  bootstrap.bat
template/src/: AppStateMainMenu.cpp
template/stuff/: 3rdparty-readme.md  AppStateIngame.cpp  AppStateIngame.hpp  AppStateMainMenu.cpp  AppStateMainMenu.hpp  AppStateMenuOptions.cpp  AppStateMenuOptions.hpp  CMakeLists.txt  Gui.hpp  Main.cpp  prepare-release.bat
tests/: sandbox.cpp
